--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
-
+Fateful Dungeon_BurstDebugInformation_DoNotShip
+MonoBleedingEdge
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
